--- a/src/components/card-form/card-form.styles.scss
+++ b/src/components/card-form/card-form.styles.scss
@@ -1,33 +1,26 @@
-@import './../../shared/scss/shared';
+@import "./../../shared/scss/shared";
 
 .card-form-wrapper {
   @include flex-box(row, center, center);
   min-height: calc(100vh - 67px);
   overflow: hidden;
   padding: 20px 50px;
-  background: linear-gradient(45deg, rgb(0, 114, 180), transparent),
-    repeating-linear-gradient(
-      45deg,
-      rgba(0, 163, 255, .22) 0%,
-      rgba(0, 163, 255, .22) 2%,
-      transparent 2%,
-      transparent 3%,
-      rgba(0, 163, 255, .22) 3%,
-      rgba(0, 163, 255, .22) 3.5%,
-      transparent 3.5%,
-      transparent 8.5%
-    ),
-    repeating-linear-gradient(
-      -45deg,
-      rgba(0, 163, 255, .22) 0%,
-      rgba(0, 163, 255, .22) .3%,
-      transparent .3%,
-      transparent 5%
-    );
+  position: relative;
+  &::before {
+    content: "";
+    width: 45%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--primary-color);
+    z-index: 0;
+  }
 
   .card-form-card {
     @include flex-box(row, flex-start, stretch);
-    box-shadow: -10px 10px 20px rgba(0, 0, 0, .2);
+    z-index: 1;
+    box-shadow: -10px 10px 20px rgba(0, 0, 0, 0.1);
     background-color: white;
     max-width: 1000px;
     width: 90%;
@@ -38,7 +31,7 @@
       padding: 5px 0px;
 
       &::after {
-        content: '';
+        content: "";
         position: absolute;
         bottom: 0px;
         left: 0px;
@@ -104,7 +97,7 @@
 
           .show-small {
             display: none;
-            font-size: .85em;
+            font-size: 0.85em;
             color: rgb(100, 100, 100);
             padding-left: 20px;
             text-align: right;
@@ -124,12 +117,8 @@
       @include flex-box(column, center, center);
       flex: 3;
       padding: 50px 0px;
-      background: linear-gradient(
-          180deg,
-          #ffffff 0%,
-          rgba(255, 255, 255, 0) 100%
-        ),
-        rgba(0, 163, 255, 0.22);
+      background: var(--primary-color);
+      color: white;
 
       img {
         width: 75%;
@@ -149,7 +138,7 @@
         }
         &__sub {
           font-size: 1.1em;
-          color: rgba(100, 100, 100, .75);
+          color: rgba(255, 255, 255, 0.75);
         }
       }
 
