--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -1,17 +1,17 @@
-@import './../../shared/scss/shared';
+@import "./../../shared/scss/shared";
 
 .navbar {
   @include flex-box(row, space-between, center);
   height: 67px;
 
-  background-color: rgb(37, 37, 37);
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, .1);
+  background-color: var(--primary-color);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
   z-index: 999;
   position: relative;
 
   &__logo {
     @include flex-box(row, center, center);
-    @include background-color-hover-effect(black);
+    @include background-color-hover-effect(var(--primary-color-darken));
     height: 100%;
     padding: 0px 15px;
     img {
@@ -24,23 +24,28 @@
     height: 100%;
 
     li {
-      @include flex-box(row, center, center);
-      @include background-color-hover-effect(black);
+      @include background-color-hover-effect(var(--primary-color-darken));
       width: 150px;
-      text-align: center;
       height: 100%;
+      text-align: center;
       transition: background-color 250ms ease-out;
       color: #ffffff;
 
       &.inverted {
-        @include background-color-hover-effect(var(--link-color), $text-color: white);
+        @include background-color-hover-effect(
+          var(--primary-color-darken),
+          $text-color: white
+        );
         color: black;
         background-color: #f3f2f2;
       }
 
       a {
+        @include flex-box(row, center, center);
         text-decoration: none;
         color: currentColor;
+        height: 100%;
+        width: 100%;
       }
     }
   }
