--- a/src/components/post-preview/post-preview.styles.scss
+++ b/src/components/post-preview/post-preview.styles.scss
@@ -1,17 +1,17 @@
-@import './../../shared/scss/shared';
+@import "./../../shared/scss/shared";
 
 .post-preview {
   @include flex-box(column, space-between, flex-start);
   width: 100%;
   height: 400px;
 
-  box-shadow: 0px 5px 5px rgba(100, 100, 100, .1);
-  background-color: var(--primary-color);
+  box-shadow: 0px 5px 5px rgba(100, 100, 100, 0.1);
+  background-color: white;
   color: var(--text-color);
   transition: box-shadow 500ms ease-out;
 
   &:hover {
-    box-shadow: 5px 5px 5px rgba(50, 50, 50, .15);
+    box-shadow: 5px 5px 5px rgba(50, 50, 50, 0.15);
   }
 
   &__content-container {
@@ -42,7 +42,7 @@
       }
 
       img {
-        transition: transform .5s ease-out;
+        transition: transform 0.5s ease-out;
         position: relative;
         width: 100%;
       }
@@ -57,11 +57,11 @@
     @include flex-box(row, space-between, center);
     z-index: 3;
     width: 100%;
-    background-color: rgba(var(--primary-color-rgb), .9);
+    background-color: rgba(var(--primary-color-rgb), 0.9);
     padding: 10px 20px;
 
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       bottom: 0;
       left: 50%;
@@ -69,8 +69,8 @@
       height: 1px;
       background-image: linear-gradient(
         to right,
-        rgba(var(--primary-color-rgb), .5),
-        rgba(var(--primary-color-lighten-rgb), .5)
+        rgba(var(--primary-color-rgb), 0.5),
+        rgba(var(--primary-color-lighten-rgb), 0.5)
       );
       width: 100%;
     }
@@ -87,7 +87,7 @@
 
   &__detail {
     @include flex-box(row, flex-start, center);
-    font-size: .85em;
+    font-size: 0.85em;
   }
 
   &__author {
@@ -108,11 +108,11 @@
     &__container {
       @include flex-box(row, space-between, center);
       width: inherit;
-      padding: .5em 0px;
+      padding: 0.5em 0px;
 
       &__comments {
         @include flex-box(row, flex-start, center);
-        font-size: .8em;
+        font-size: 0.8em;
 
         span {
           margin-left: 10px;
