--- a/src/components/sidenav/sidenav.styles.scss
+++ b/src/components/sidenav/sidenav.styles.scss
@@ -1,14 +1,14 @@
-@import './../../shared/scss/shared';
+@import "./../../shared/scss/shared";
 
 .sidenav {
   position: fixed;
   left: 0;
   top: 0;
-  background-color: var(--primary-color);
+  background-color: white;
   width: 55px;
   height: 100vh;
   transition: width 250ms ease-out, background-color 250ms ease-in;
-  box-shadow: 0px 0px 5px rgba(var(--box-shadow-rgb), .1);
+  box-shadow: 0px 0px 5px rgba(var(--box-shadow-rgb), 0.1);
   z-index: 99;
   overflow: hidden;
 
@@ -26,7 +26,7 @@
 
   &:hover {
     width: 225px;
-    background-color: var(--accent-color-darken);
+    background-color: var(--primary-color);
 
     ul li span {
       color: white;
@@ -54,17 +54,13 @@
       }
 
       &:hover {
-        background-color: var(--accent-color);
+        background-color: var(--primary-color-darken);
       }
 
       span {
         opacity: 0;
         margin-left: 20px;
         transition: opacity 100ms ease-out;
-      }
-
-      &:last-child {
-        margin-top: auto;
       }
     }
   }
