--- a/src/index.scss
+++ b/src/index.scss
@@ -5,12 +5,12 @@
   --icon-color: var(--text-color);
   --box-shadow-rgb: 50, 50, 50;
 
-  --primary-color: #ffffff;
+  --primary-color: #ff8049;
   --primary-color-rgb: 255, 255, 255;
   --primary-color-lighten-rgb: 200, 200, 200;
   --accent-color: #4a4a4a;
   --accent-color-darken: rgb(37, 37, 37);
-  --primary-color-darken: #f3f2f2;
+  --primary-color-darken: #bd5d33;
   --background-color: #f6f6f6;
   --text-color: black;
   --text-color-rgb: 0, 0, 0;
@@ -20,7 +20,7 @@
   --error-color: #e30000;
 
   --box-shadow-light: white;
-  --box-shadow-dark: rgba(0, 0, 0, .2);
+  --box-shadow-dark: rgba(0, 0, 0, 0.2);
 }
 
 body.dark {
@@ -35,8 +35,8 @@ body.dark {
   --text-color-lighten: rgb(150, 150, 150);
   --profile-background-color: #191919;
 
-  --box-shadow-dark: rgba(0, 0, 0, .6);
-  --box-shadow-light: rgba(255, 255, 255, .1);
+  --box-shadow-dark: rgba(0, 0, 0, 0.6);
+  --box-shadow-light: rgba(255, 255, 255, 0.1);
   // --primary-color: rgb(25, 28, 38);
   // --primary-color-rgb: 25, 28, 38;
   // --primary-color-lighten-rgb: 34, 44, 78;
@@ -75,7 +75,7 @@ h2 {
 
 body {
   margin: 0;
-  font-family: 'Montserrat', 'PT Sans', 'Roboto', 'Source Sans Pro', 'Roboto',
+  font-family: "Montserrat", "PT Sans", "Roboto", "Source Sans Pro", "Roboto",
     "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
