--- a/src/pages/explore-posts/explore-posts.styles.scss
+++ b/src/pages/explore-posts/explore-posts.styles.scss
@@ -1,4 +1,4 @@
-@import './../../shared/scss/shared';
+@import "./../../shared/scss/shared";
 
 .explore-posts {
   @include flex-box(column, flex-start, flex-end);
@@ -17,19 +17,15 @@
       background-color: transparent;
       padding: 5px 8px;
       border: none;
+      cursor: pointer;
       font-size: 1em;
-      background-color: var(--primary-color);
-      color: var(--text-color);
       border-radius: 5px;
       transition: box-shadow 300ms ease-out;
-
-      box-shadow: 3px 3px 1px 0px rgba(100, 100, 100, .1) inset,
-        -2px -2px 1px 0px var(--primary-color) inset;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
       &:hover,
       &:focus {
-        box-shadow: 3px 3px 2px 0px rgba(100, 100, 100, .2) inset,
-          -2px -2px 2px 0px var(--primary-color) inset;
+        box-shadow: 3px 3px 2px 0px rgba(100, 100, 100, 0.15) inset;
       }
     }
   }
